tests/dataset/tpc-ds/compiler/pl/q99.error
run: exit status 2
[]
ERROR: /tmp/q99.pl:58: user:main Unknown message: error('expect failed')
